# banking-pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dags/: pipeline_dag.py
scripts/: ingestion.py  load.py  transform.py
sql/: init_db.sql
